# SynIB

./: .gitignore  README.md  iha_plan.md  pyproject.toml  requirements.txt  submit_synib.sh  train_mustard_1.sh  train_mustard_2.sh  train_mustard_3.sh  train_mustard_full_ft.sh  train_mustard_iha.sh  train_mustard_iha_lora_zero.sh  train_mustard_jointtf.sh  train_mustard_jointtf_iha.sh  train_mustard_lora.sh  train_mustard_synib_lora.sh  train_mustard_synibu_lora.sh  train_mustard_text_lora.sh  train_mustard_video_lora.sh
.claude/: .nfs000000000f8100d0000053e7  .nfs000000000f814298000053f4
notebooks/MultimodalQA/: MultimodalQA_loading.ipynb
run/: README.md  build_factorcl_synib_family_tables.sh  list_configs.sh  local_resume_urfunny_synib_ceu.sh  plot_jointtf_curves.py  show_jointtf_hparam_table.sh
run/condor/: generate_factorcl_recover_submissions.py  mosei_joint_tf.args  mosei_joint_tf.job  mosei_joint_tf_iha.args  mosei_joint_tf_iha.job  mosei_joint_tf_iha_kfold.args  mosei_joint_tf_iha_kfold.job  mosei_joint_tf_iha_lrwd_grid.args  mosei_joint_tf_iha_lrwd_grid.job  mosei_joint_tf_iha_nl8.args  mosei_joint_tf_iha_nl8.job  mosei_joint_tf_iha_nlayers.args  mosei_joint_tf_iha_nlayers.job  mosei_joint_tf_kfold.args  mosei_joint_tf_kfold.job  mosei_joint_tf_kfold_missing.args  (+143 more)
scripts/: collect_kfold_results.py  inspect_mustard_mib_best.sh  prune_mustard_mib_keep_best.sh  render_tqa_synergy_summary_cards.py
tests/: test_cremad_smoke.py  test_factorcl_smoke.py  test_mustard_qwen_cached_masking.py  test_mustard_smoke.py  test_show_trained_models_integration.py
(+728 files in other folders)
