[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synib"
version = "0.1.0"
description = "SynIB: structured extraction of Synergy pipelines for CREMA-D, ScienceQA, ESNLI, XOR"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
